# FastAPI-Web-Admin-Panel

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/database/: db.py
app/migrations/: env.py
app/migrations/versions/: initial_migration.py
app/models/: user.py
app/routes/: admin.py  auth.py  users.py
app/security/: auth.py  oauth2.py
app/static/css/: styles.css
app/static/js/: script.js
app/templates/: base.html
app/templates/admin/: dashboard.html  users.html
app/templates/frontend/: dashboard.html  index.html  kontakt.html  login.html  profile.html  register.html
